       [fileapi] WebKitFlags should not be constructable per Directories & System spec        https://bugs.webkit.org/show_bug.cgi?id=68916

Reviewed by Eric Seidel.

Source/WebCore:

       Remove IDL for the object and all DOM references to it.
       * fileapi/WebKitFlags.idl: Removed.
       * page/DOMWindow.idl:
       * workers/WorkerContext.idl:
       Remove references to the JSC/V8 objects compiled from the IDL.
       * bindings/js/JSDirectoryEntryCustom.cpp:
       (WebCore::JSDirectoryEntry::getFile):
       (WebCore::JSDirectoryEntry::getDirectory):
       * bindings/js/JSDirectoryEntrySyncCustom.cpp:
       (WebCore::getFlags):
       * bindings/v8/custom/V8DirectoryEntryCustom.cpp:
       (WebCore::V8DirectoryEntry::getDirectoryCallback):
       (WebCore::V8DirectoryEntry::getFileCallback):
       * bindings/v8/custom/V8DirectoryEntrySyncCustom.cpp:
       (WebCore::getFlags):
       Fix up build files.
       * WebCore.gypi:
       * WebCore.vcproj/WebCore.vcproj:
       * WebCore.xcodeproj/project.pbxproj:
       * WebCore/CMakeLists.txt:
       * WebCore/CodeGenerators.pri:
       * WebCore/DerivedSources.cpp:
       * WebCore/GNUmakefile.list.am:


LayoutTests:

       Remove a test that constructed the object; add one that tests error-handling for non-object parameters while I'm in there.
       * fast/filesystem/flags-passing-expected.txt:
       * fast/filesystem/script-tests/flags-passing.js:



Canonical link: https://commits.webkit.org/91929@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103624 268f45cc-cd09-0410-ab3c-d52691b4dbfc