Source/WebCore/DerivedSources.cpp
@@ -127,7 +127,6 @@
 #include "JSFileWriter.cpp"
 #include "JSFileWriterCallback.cpp"
 #include "JSFileWriterSync.cpp"
-#include "JSWebKitFlags.cpp"
 #include "JSFloat32Array.cpp"
 #include "JSFloat64Array.cpp"
 #include "JSGeolocation.cpp"
