Source/WebCore/bindings/js/JSDirectoryEntryCustom.cpp
@@ -38,7 +38,6 @@
 #include "JSDOMBinding.h"
 #include "JSEntryCallback.h"
 #include "JSErrorCallback.h"
-#include "JSWebKitFlags.h"
 #include <wtf/Assertions.h>
 
 using namespace JSC;
@@ -62,15 +61,14 @@ JSValue JSDirectoryEntry::getFile(ExecState* exec)
     }
 
     RefPtr<WebKitFlags> flags;
-    if (!exec->argument(1).isNull() && !exec->argument(1).isUndefined() && exec->argument(1).isObject() && !exec->argument(1).inherits(&JSWebKitFlags::s_info)) {
+    if (!exec->argument(1).isNull() && !exec->argument(1).isUndefined() && exec->argument(1).isObject()) {
         JSObject* object = exec->argument(1).getObject();
         flags = WebKitFlags::create();
         JSValue jsCreate = object->get(exec, Identifier(exec, "create"));
         flags->setCreate(jsCreate.toBoolean(exec));
         JSValue jsExclusive = object->get(exec, Identifier(exec, "exclusive"));
         flags->setExclusive(jsExclusive.toBoolean(exec));
-    } else
-        flags = toWebKitFlags(exec->argument(1));
+    }
     if (exec->hadException())
         return jsUndefined();
     RefPtr<EntryCallback> successCallback;
@@ -111,15 +109,14 @@ JSValue JSDirectoryEntry::getDirectory(ExecState* exec)
     }
 
     RefPtr<WebKitFlags> flags;
-    if (!exec->argument(1).isNull() && !exec->argument(1).isUndefined() && exec->argument(1).isObject() && !exec->argument(1).inherits(&JSWebKitFlags::s_info)) {
+    if (!exec->argument(1).isNull() && !exec->argument(1).isUndefined() && exec->argument(1).isObject()) {
         JSObject* object = exec->argument(1).getObject();
         flags = WebKitFlags::create();
         JSValue jsCreate = object->get(exec, Identifier(exec, "create"));
         flags->setCreate(jsCreate.toBoolean(exec));
         JSValue jsExclusive = object->get(exec, Identifier(exec, "exclusive"));
         flags->setExclusive(jsExclusive.toBoolean(exec));
-    } else
-        flags = toWebKitFlags(exec->argument(1));
+    }
     if (exec->hadException())
         return jsUndefined();
     RefPtr<EntryCallback> successCallback;
