third_party/WebKit/Source/WebCore/bindings/js/JSDirectoryEntrySyncCustom.cpp
@@ -39,7 +39,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "JSEntryCallback.h"
 #include "JSErrorCallback.h"
 #include "JSFileEntrySync.h"
-#include "JSWebKitFlags.h"
 #include <wtf/Assertions.h>
 
 using namespace JSC;
@@ -50,8 +49,6 @@ static PassRefPtr<WebKitFlags> getFlags(ExecState* exec, const JSValue& argument
 {
     if (argument.isNull() || argument.isUndefined() || !argument.isObject())
         return 0;
-    if (argument.inherits(&JSWebKitFlags::s_info))
-        return toFlags(argument);
 
     RefPtr<WebKitFlags> flags;
     JSObject* object = argument.getObject();
